--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 <body>
 <h1> HTML: HyperText Markup Language</h1>
 <p>Tim Berners-Lee invented the first browser at CERN, to enable researchers to share their research with eachother.</p>
-<a href="http://home.web.cern.ch/topics/birth-web"  target="_blank"><img src="https://www.kasandbox.org/programming-images/misc/tim-berners-lee-webpage.png/>
-"Read more about the history of HTM
+<a href="http://home.web.cern.ch/topics/birth-web"  target="_blank"> Read more about the history of HTM <br>
+    <img src="https://www.kasandbox.org/programming-images/misc/tim-berners-lee-webpage.png" width="300"/>
+
+    <br/>Image courtesy CERN
 
 </a>
 </body>
