--- a/Taobangdongian.html
+++ b/Taobangdongian.html
@@ -5,22 +5,59 @@
     <title>Thời khóa biểu lớp C1020G1</title>
 </head>
 <body>
-<table border="1" align="center" cellspacing="0" style="width: 50">
-   <h1 align="center">Thời khóa biểu lớp C1020G1</h1>
+<h1 align="center">Thời khóa biểu lớp C1020G1</h1>
+<table align="center" width="500">
+    <tr>
+        <td>
+            <ul type="none" style="color: blue" align="left">
+                <li>Lớp: C1010G1</li>
+                <li>Giáo viên:ChauNT</li>
+                <li>Phòng học: Tầng 3/TT01</li>
+            </ul>
+        </td>
+        <td> <ul style="color: blue" align="right" type="none">
+            <li>Thời gian học 13h30-17h30</li>
+            <li>Ngày học: Thứ 3,5,7</li>
+        </ul>
+        </td>
+    </tr>
+<!--</table>-->
+<table border="1" align="center" cellspacing="0"  width="500">
     <tr bgcolor="yellow">
+        <th colspan="3">&nbsp;</th>
         <th>Thứ 3</th>
         <th>Thứ 5</th>
         <th>Thứ 7</th>
     </tr>
+    <tr bgcolor="orange">
+        <th>Tuần</th>
+        <th>Ngày bắt đầu</th>
+        <td>Ngày kết thúc</td>
+        <td colspan="3">Môn học</td>
+    </tr>
     <tr>
+        <td>01</td>
+        <td>01/09/2009</td>
+        <td>05/09/2009</td>
         <td>CF-T1,L1</td>
         <td>CF-T2,L2</td>
         <td>CF-T3,L3</td>
     </tr>
     <tr>
-        <td>CF-T4</td>
+        <td>02</td>
+        <td>08/09/2009</td>
+        <td>12/09/2009</td>
+        <td>CF-T4,L4</td>
         <td>CF-Written Test</td>
         <td>C-T1,L1</td>
+    </tr>
+    <tr>
+        <td>03</td>
+        <td>...</td>
+        <td>...</td>
+        <td>...</td>
+        <td>...</td>
+        <td>...</td>
     </tr>
 </table>
 </body>
