update more clear

--- a/Taobannangcao.html
+++ b/Taobannangcao.html
@@ -40,12 +40,12 @@
 </head>
 <body>
 <center><h3>Thời Khóa Biểu</h3></center>
-<table border="1" align="center" cellspacing="0" style="width: 50%>
-    <tr bgcolor="red">
+<table border="1" align="center" cellspacing="0">
+    <tr>
         <th rowspan="2">Thứ</th>
         <th colspan="2">Hoạt động</th>
     </tr>
-    <tr bgcolor="red">
+    <tr>
         <th>Sáng</th>
         <th>Chiều</th>
     </tr>
