--- a/mycv.html
+++ b/mycv.html
@@ -3,13 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>My CV</title>
+    <style>
+        h1 {
+            color: green;
+            font-size: 50px;
+            text-align: -moz-left;
+        }
+        body {
+            color: green;
+        }
+    </style>
 </head>
 <body>
 <div style="align: center">
-<fieldset style="size: 500px">
+<fieldset style="width: 800px">;
     <h1>Resume</h1>
     <br>
-    <img align="top" width="15%" alt="anh cv" src="https://s.rfi.fr/media/display/713f4614-21b0-11ea-9d6c-005056bf87d6/w:1280/p:16x9/2019-12-11t195559z_599229512_rc27td9nxomf_rtrmadp_3_usa-election-facebook-ads.webp">
+    <img align="top" width="50%" alt="anh cv" src="https://s.rfi.fr/media/display/713f4614-21b0-11ea-9d6c-005056bf87d6/w:1280/p:16x9/2019-12-11t195559z_599229512_rc27td9nxomf_rtrmadp_3_usa-election-facebook-ads.webp">
     <br>
     <dl>
         <h3><li><b>Họ và tên : Trần Bơm</b></li></h3>
@@ -37,7 +47,7 @@
                 <dd>Mục tiêu trong 2 năm tới sẽ thành thạo từ 2 đến 3 ngôn ngữ lập trình</dd>
             </dl>
         </dl>
-    </ul>
+    </dl>
 </fieldset>
 </div>
 </body>
