--- a/Bancovua.html
+++ b/Bancovua.html
@@ -1,10 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Bàn Cờ Vua</title>
+    <style type="text/css">
+    </style>
 </head>
 <body>
-$END$
+<h3 align="center">Bàn Cờ vua</h3>
+<div style="width: 100%" align="center" >
+    <table border="1" cellspacing="0" align="center" style="width: 50%;">
+        <tr style="width: 500px; height: 100px">
+            <td style="background-color: black; width: 100px">&nbsp</td>
+            <td style="background-color: white; width: 100px">&nbsp</td>
+            <td style="background-color: black; width: 100px">&nbsp</td>
+            <td style="background-color: white; width: 100px">&nbsp</td>
+            <td style="background-color: black; width: 100px">&nbsp</td>
+            <td style="background-color: white; width: 100px">&nbsp</td>
+            <td style="background-color: black; width: 100px">&nbsp</td>
+            <td style="background-color: white; width: 100px">&nbsp</td>
+        </tr>
+        <tr style="width: 500px; height: 100px">
+            <td style="background-color: white; width: 100px">&nbsp</td>
+            <td style="background-color: black; width: 100px">&nbsp</td>
+            <td style="background-color: white; width: 100px">&nbsp</td>
+            <td style="background-color: black; width: 100px">&nbsp</td>
+            <td style="background-color: white; width: 100px">&nbsp</td>
+            <td style="background-color: black; width: 100px">&nbsp</td>
+            <td style="background-color: white; width: 100px">&nbsp</td>
+            <td style="background-color: black; width: 100px">&nbsp</td>
+        </tr>
+        <tr style="width: 500px; height: 100px">
+            <td style="background-color: black; width: 100px">&nbsp</td>
+            <td style="background-color: white; width: 100px">&nbsp</td>
+            <td style="background-color: black; width: 100px">&nbsp</td>
+            <td style="background-color: white; width: 100px">&nbsp</td>
+            <td style="background-color: black; width: 100px">&nbsp</td>
+            <td style="background-color: white; width: 100px">&nbsp</td>
+            <td style="background-color: black; width: 100px">&nbsp</td>
+            <td style="background-color: white; width: 100px">&nbsp</td>
+        </tr>
+        <tr style="width: 500px; height: 100px">
+            <td style="background-color: white; width: 100px">&nbsp</td>
+            <td style="background-color: black; width: 100px">&nbsp</td>
+            <td style="background-color: white; width: 100px">&nbsp</td>
+            <td style="background-color: black; width: 100px">&nbsp</td>
+            <td style="background-color: white; width: 100px">&nbsp</td>
+            <td style="background-color: black; width: 100px">&nbsp</td>
+            <td style="background-color: white; width: 100px">&nbsp</td>
+            <td style="background-color: black; width: 100px">&nbsp</td>
+        </tr>
+        <tr style="width: 500px; height: 100px">
+            <td style="background-color: black; width: 100px">&nbsp</td>
+            <td style="background-color: white; width: 100px">&nbsp</td>
+            <td style="background-color: black; width: 100px">&nbsp</td>
+            <td style="background-color: white; width: 100px">&nbsp</td>
+            <td style="background-color: black; width: 100px">&nbsp</td>
+            <td style="background-color: white; width: 100px">&nbsp</td>
+            <td style="background-color: black; width: 100px">&nbsp</td>
+            <td style="background-color: white; width: 100px">&nbsp</td>
+        </tr>
+        <tr style="width: 500px; height: 100px">
+            <td style="background-color: white; width: 100px">&nbsp</td>
+            <td style="background-color: black; width: 100px">&nbsp</td>
+            <td style="background-color: white; width: 100px">&nbsp</td>
+            <td style="background-color: black; width: 100px">&nbsp</td>
+            <td style="background-color: white; width: 100px">&nbsp</td>
+            <td style="background-color: black; width: 100px">&nbsp</td>
+            <td style="background-color: white; width: 100px">&nbsp</td>
+            <td style="background-color: black; width: 100px">&nbsp</td>
+        </tr>
+        <tr style="width: 500px; height: 100px">
+            <td style="background-color: black; width: 100px">&nbsp</td>
+            <td style="background-color: white; width: 100px">&nbsp</td>
+            <td style="background-color: black; width: 100px">&nbsp</td>
+            <td style="background-color: white; width: 100px">&nbsp</td>
+            <td style="background-color: black; width: 100px">&nbsp</td>
+            <td style="background-color: white; width: 100px">&nbsp</td>
+            <td style="background-color: black; width: 100px">&nbsp</td>
+            <td style="background-color: white; width: 100px">&nbsp</td>
+        </tr>
+        <tr style="width: 500px; height: 100px">
+            <td style="background-color: white; width: 100px">&nbsp</td>
+            <td style="background-color: black; width: 100px">&nbsp</td>
+            <td style="background-color: white; width: 100px">&nbsp</td>
+            <td style="background-color: black; width: 100px">&nbsp</td>
+            <td style="background-color: white; width: 100px">&nbsp</td>
+            <td style="background-color: black; width: 100px">&nbsp</td>
+            <td style="background-color: white; width: 100px">&nbsp</td>
+            <td style="background-color: black; width: 100px">&nbsp</td>
+        </tr>
+    </table>
+</div>
 </body>
 </html>
